# appleseed

./: CMakeLists.txt  TODO
cmake/: CompilerFlags.cmake  FindOSL.cmake  TargetArch.cmake  Util.cmake
cmake/config/: linux-gcc-clang.txt
cmake/modules/: FindOSL.cmake  FindOpenImageIO.cmake
include/: CMakeLists.txt
sandbox/: CMakeLists.txt
sandbox/share/: rfmdisneypresets2appleseed.py
src/: CMakeLists.txt
src/appleseed/: CMakeLists.txt
src/appleseed.cli/: CMakeLists.txt
src/appleseed.shaders/: CMakeLists.txt  as_osl_extensions.h.in
src/appleseed.shaders/include/appleseed/color/: as_chromatic_adaptation.h
src/appleseed.shaders/src/appleseed/: as_blackbody.osl  as_disney_material.osl  as_glass.osl  as_hair_material.osl  as_matte.osl  as_metal.osl  as_plastic.osl  as_sbs_pbrmaterial.osl  as_standard_surface.osl  as_subsurface.osl
src/appleseed.shaders/src/max/: as_max_disney_material.osl  as_max_glass_material.osl  as_max_metal_material.osl  as_max_plastic_material.osl  as_max_sss_material.osl
src/appleseed.shaders/src/maya/: as_maya_areaLight.osl  as_maya_matrixInverse.osl
src/appleseed/foundation/image/: genericprogressiveimagefilereader.cpp  pixel.h
src/appleseed/renderer/kernel/rendering/: rendererservices.h
src/tools/animatecamera/: CMakeLists.txt
src/tools/convertmeshfile/: CMakeLists.txt
src/tools/denoiser/: CMakeLists.txt
src/tools/dumpmetadata/: CMakeLists.txt
src/tools/makefluffy/: CMakeLists.txt
src/tools/projecttool/: CMakeLists.txt
